--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+@import url("https://fonts.googleapis.com/css2?family=Stardos+Stencil:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: "Stardos Stencil", cursive;
+  background: #393e45;
+  color: #d1d5de;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  width: 100%;
+  max-width: 992px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #d1d5de;
+  color: #393e45;
+  font-size: 3rem;
+  border-radius: 50%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+h2 {
+  margin-top: 2rem;
+  font-weight: 400;
+  font-size: 3rem;
+}
+
+h2 .eth {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+
+h3 {
+  margin-bottom: 1rem;
+}
+
+.walletMain {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.walletLeft,
+.walletRight {
+  width: 50%;
+}
+
+input {
+  border: 0;
+  height: 2rem;
+  border-top-left-radius: 5px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+button {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  height: 2rem;
+  border: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  cursor: pointer;
+  background: #d1d5de;
+  color: #393e45;
+}
+
+.error,
+.success {
+  padding: 1rem;
+  margin-top: 1rem;
+  border-radius: 5px;
+}
+
+.error {
+  background: #ee3312;
+  color: #d1d5de;
+}
+
+.success {
+  background: #53814d;
+  color: #ded5de;
 }
